# relay-contracts

./: .gitignore  README.md
deposit/: Makefile
deposit/contract/: Cargo.toml
deposit/contract/src/: main.rs
deposit/tests/: Cargo.toml
relay/: Makefile
relay/contract/: Cargo.toml
relay/contract/src/: constants.rs  errors.rs  events.rs  main.rs  permission.rs  utils.rs
sample/: Makefile
sample/contract/: Cargo.toml
sample/contract/src/: constants.rs  main.rs  utils.rs
test/: .env.sample  index.ts  package-lock.json  package.json
test/contracts/: deposit.wasm  relay.wasm  sample.wasm
