[package]
name = "relay"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "4.0.0"
casper-types = "4.0.1"
casper-event-standard = "0.4.1"
num-traits = { version = "0.2.17", default-features = false }

[[bin]]
name = "relay"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

